# openclx

./: .gitignore  .pre-commit-config.yaml  README.org  meson.build  meson_options.txt  support.org
ci/: nvidia-test  version-test
guix/: manifest-rocm.scm  manifest.scm
src/: meson.build
src/openclx/: addressing_mode  argument_type_qualifiers  array_view  binary  binary.cc  binary_types  buffer  buffer.cc  build_status  cl  color  command  command_queue  command_queue.cc  command_queue_flags  command_queue_flags.cc  command_stack  command_stack.cc  compiler  compiler.cc  config.in  context  context.cc  context_properties  context_properties.cc  device  device.cc  device_affinity_domain  device_flags  device_local_memory  device_memory_cache  device_partition  device_test.cc  downcast  error  error.cc  event  event.cc  event_stack  event_stack.cc  (+45 more)
src/openclx/arm/: device  device.cc  import_properties  kernel  kernel.cc  memory_object  memory_object.cc  meson.build
src/openclx/bits/: arm  cl_amd_device_attribute_query  cl_img_use_gralloc_ptr  cl_khr_initialize_memory  extensions  flags  macros  meson.build  pragmas
src/openclx/d3d10/: memory_object  memory_object.cc  meson.build
src/openclx/d3d11/: memory_object  memory_object.cc  meson.build
src/openclx/d3d9/: media_surface  media_surface.cc  meson.build
src/openclx/egl/: image  meson.build
src/openclx/ext/: affinity_domain  device  device.cc  device_partition  meson.build  partition_properties
src/openclx/gl/: buffer  buffer.cc  memory_objects  meson.build  texture  texture.cc
src/openclx/intel/: accelerator  accelerator.cc  context  context.cc  device  device.cc  diagnostics_level  kernel  kernel.cc  me_accelerator  me_accelerator.cc  memory_object  memory_object.cc  meson.build  platform  platform.cc
src/openclx/nv/: device  device.cc  meson.build
src/openclx/qcom/: context  device  device.cc  meson.build
