openclx_src += files([
    'accelerator.cc',
    'context.cc',
    'device.cc',
    'kernel.cc',
    'me_accelerator.cc',
    'memory_object.cc',
    'platform.cc',
])

install_headers(
    'accelerator',
    'context',
    'device',
    'kernel',
    'diagnostics_level',
    'me_accelerator',
    'memory_object',
    'platform',
    subdir: join_paths('openclx', 'intel')
)
